# iceland-review-scraper

./: .gitignore  Dockerfile  Pipfile  README.md  __main__.py  app.py  docker-compose.yml  pyproject.toml  scraper.py  twitter.py
templates/: base.html
